# BzPeri

./: .clang-format  .gitignore  BLUEZ_MIGRATION.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPATIBILITY_MIGRATION.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  MODERNIZATION.md  NOTICE  README-PACKAGING.md  README.md  SECURITY.md  STANDALONE_USAGE.md  TODOS.md  bzperi.pc.in  configure.ac  gobbledegook.pc.in  index.html  test_bondable_api.cpp  test_cpp20_features.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: apt-publish.yml  build.yml
build_test/: CPackConfig.cmake  CPackSourceConfig.cmake  bzp-standalone  config.h
cmake/: bzperi-config.cmake.in
dbus/: com.bzperi.conf
debian/: bzperi-dev.install  bzperi-tools.install  bzperi.install  bzperi.postinst  bzperi.postrm  bzperi.prerm  changelog  control  copyright  rules
include/: BzPeri.h  BzPeriConfigurator.h  Gobbledegook.h
include/bzp/: BluezAdapter.h  BluezTypes.h  ConfiguratorSupport.h  DBusInterface.h  DBusMethod.h  DBusObject.h  FormatCompat.h  GLibTypes.h  GattCharacteristic.h  GattDescriptor.h  GattInterface.h  GattProperty.h  GattService.h  GattUuid.h  Globals.h  Logger.h  Server.h  Utils.h
samples/: SampleServices.cpp  SampleServices.h  standalone.cpp
scripts/: build-deb.sh  configure-bluez-experimental.sh  setup-apt-repo.sh
src/: AsyncDBus.cpp  AsyncDBus.h  BluezAdapter.cpp  BluezAdapter.h  BluezAdapterCompat.cpp  BluezAdapterCompat.h  BluezAdapterRuntime.cpp  BluezAdvertisement.cpp  BluezAdvertisement.h  BluezAdvertisingSupport.cpp  BluezAdvertisingSupport.h  BluezModern.h  BluezPeripheral.cpp  BluezTypes.cpp  BluezTypes.h  DBusInterface.cpp  DBusInterface.h  DBusMethod.cpp  DBusMethod.h  DBusObject.cpp  DBusObject.h  DBusObjectPath.h  ErrorHandling.h  FormatCompat.cpp  FormatCompat.h  GLibRAII.h  GattCharacteristic.cpp  GattCharacteristic.h  GattDescriptor.cpp  GattDescriptor.h  GattInterface.cpp  GattInterface.h  GattProperty.cpp  GattProperty.h  GattServerModern.h  GattService.cpp  GattService.h  GattUuid.h  Gobbledegook.cpp  Init.cpp  (+29 more)
tests/: bzperi_tests.cpp
toolchains/: aarch64-linux-gnu.cmake
